--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.9",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "auto-zustand-selectors-hook": "^2.0.5",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.11.7",
+    "immer": "9.0.21",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.3",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
