--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "immer": "9.0.21",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
+    "next-intl": "^3.21.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
