--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-image-lightbox-rotation": "5.1.4-rotate",
     "tailwind-merge": "^2.5.3",
     "zustand": "5.0.0-rc.2"
   },
