--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.1.9",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "auto-zustand-selectors-hook": "^2.0.5",
+    "cloudinary-build-url": "^0.2.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.7",
     "immer": "9.0.21",
@@ -22,6 +23,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-image-lightbox": "^5.1.4",
     "react-image-lightbox-rotation": "5.1.4-rotate",
     "tailwind-merge": "^2.5.3",
     "zustand": "5.0.0-rc.2"
