--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.3.0",
     "react-image-lightbox": "^5.1.4",
     "react-image-lightbox-rotation": "5.1.4-rotate",
+    "react-intersection-observer": "^9.13.1",
     "tailwind-merge": "^2.5.3",
     "zustand": "5.0.0-rc.2"
   },
