--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "next-intl": "^3.21.1",
+    "node-mailjet": "^6.0.6",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
