--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 MAILJET_API_KEY=
 MAILJET_API_SECRET=
+MAILJET_SENDER_EMAIL=
+MAILJET_SENDER_NAME=
+MAILJET_RECIPIENT_EMAIL=
+MAILJET_RECIPIENT_NAME=
